[tool.poetry]
name = "py-khoihuynh"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{ include = "py_khoihuynh" }]

[tool.poetry.scripts]
py-cowsay = 'py_khoihuynh.demo:tong'

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
rich = "^13.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # flake8-print
    "T20",
    # pyupgrade
    "UP",
    # Ruff-specific rules
    "RUF",
]

# Same as Black.
line-length = 88

target-version = "py310"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
